navbar text alignment fixing

--- a/src/App.css
+++ b/src/App.css
@@ -143,16 +143,13 @@ nav.navbar a.navbar-brand {
   /* Width of the logo */
   padding-left: 50px;
 
-  padding-right: 300px;
+  padding-right: 100px;
   /* Right padding to space out from the links */
 }
 
 /* Styling for navbar links */
 .navbar-link {
   color: #000;
-  /* Default link color */
-  padding: 0 15px;
-  /* Padding around the links */
   text-decoration: none;
   /* Remove underline */
   display: flex;
@@ -161,7 +158,6 @@ nav.navbar a.navbar-brand {
   /* Center align items vertically */
   flex: 1;
   text-align: center;
-  padding: 0 15px;
 }
 
 /* Styling for active navbar link */
